Fix FIB unit tests